--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,7 @@
         "**/.git/**": true,
     },
     "cortex-debug.variableUseNaturalFormat": true,
+    "files.associations": {
+      "condition_variable": "c"
+    },
 }
