--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     },
     "cortex-debug.variableUseNaturalFormat": true,
     "files.associations": {
-      "condition_variable": "c"
+      "condition_variable": "c",
+      "cstdint": "c"
     },
 }
