--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,18 @@
     "files.associations": {
       "condition_variable": "c",
       "cstdint": "c",
-      "board.h": "c"
+      "board.h": "c",
+      "optional": "c",
+      "ratio": "c",
+      "system_error": "c",
+      "array": "c",
+      "functional": "c",
+      "tuple": "c",
+      "type_traits": "c",
+      "utility": "c",
+      "variant": "c",
+      "charconv": "c",
+      "chrono": "c",
+      "format": "c"
     },
 }
